k8s/bookstore-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gripday-bookstore
  labels:
    app.kubernetes.io/name: gripday-bookstore-service
    app.kubernetes.io/component: bookstore
    app.kubernetes.io/part-of: gripday-platform
    environment: local
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging-env
  labels:
    app.kubernetes.io/part-of: gripday-platform
    environment: staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: gripday-production-env
  labels:
    app.kubernetes.io/part-of: gripday-platform
    environment: production
